--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,11 +1,12 @@
 ---
 
+seafile_admin_pass: 'changeme'
 seafile_version: 6.0.9
 # must correspond to downloaded tar-file
-
+seafile_install_dir: "/opt/seafile"
 ip: "{{ansible_all_ipv4_addresses[0]}}"
 mysql_user: seafile
-mysql_passwd: 'SSMKfMv4tiyZ'
+mysql_passwd: 'changeme'
 server_name:
   - seafile.example.com
   - seafile.sha2017.org
