--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,29 +1,51 @@
+---
+- name: Creating seafile directory
+  file: 
+    state: directory
+    owner: root
+    group: root
+    mode:  0755
+    path: "{{seafile_install_dir}}"
 
-- name: copy seafile directory
-  synchronize:
-    src: seafile-server-{{seafile_version}}
-    dest: /opt/seafile
+- name: Make dir for the newest seafile server software
+  file: 
+    state: directory
+    owner: root
+    group: root
+    mode: 0755
+    path: "{{seafile_install_dir}}/seafile-server-{{seafile_version}}"
 
-# - name: stop seafile services
-#   service:
-#     name: "{{item}}"
-#     state: stopped
-#   with_items:
-#     - seafile
-#     - seahub
+
+- name: Getting stats of seafile tar ball.
+  stat: path={{seafile_install_dir}}/seafile-server_{{seafile_version}}_x86-64.tar.gz
+  register: seafile_download
+
+- name: Downloading seafile tar ball.
+  get_url:
+     url: https://bintray.com/artifact/download/seafile-org/seafile/seafile-server_{{seafile_version}}_x86-64.tar.gz
+     dest: "{{seafile_install_dir}}/seafile-server_{{seafile_version}}_x86-64.tar.gz"
+  when: seafile_download.stat.exists == false
+
+- name: Unarchive seafile server tar ball.
+  unarchive:
+    src:  "{{seafile_install_dir}}/seafile-server_{{seafile_version}}_x86-64.tar.gz"
+    dest: "{{seafile_install_dir}}/"
+    remote_src: true  
 
 - name: copy installation script
   template:
     src: templates/install-seafile.sh
-    dest: /opt/seafile
+    dest: "{{seafile_install_dir}}/install-seafile.sh"
+    group: root 
+    owner: root
     mode: ugo+x
 
 - name: install seafile
   shell: "./install-seafile.sh > install-seafile.log 2>&1 || true"
   args:
-    chdir: /opt/seafile
+    chdir: "{{seafile_install_dir}}"
 
 - name: patch seafile admin user
   patch:
-    basedir: "/opt/seafile/seafile-server-{{seafile_version}}"
+    basedir: "{{seafile_install_dir}}/seafile-server-{{seafile_version}}"
     src: check_init_admin.py.patch
